--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ _environments/*.yml
 .env.*.local
 *.key
 
+# Data
+*.sqlite
 
 # Dependencies
 node_modules
@@ -28,9 +30,6 @@ build
 dist
 coverage
 *.test
-
-# Data files
-*.sqlite
 
 
 # Log files & reports
